# CJ-FASTAPI-DDD

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.migrate  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.agents/: README.md
.agents/architect/: role.md
.agents/developer/: role.md
.agents/devops/: role.md
.agents/lead/: role.md
.agents/tester/: role.md
.claude/: README.md
.claude/commands/: quality-gate.md
.claude/rules/: architecture.md  coding-style.md  testing.md
.claude/skills/add-bounded-context/: SKILL.md
.claude/skills/add-use-case/: SKILL.md
.github/workflows/: cd.yml  ci.yml
docker/: docker-compose.yml
docker/keycloak/: realm-export.json
docs/: index.md
docs/architecture/: auth-rbac.md  bounded-contexts.md  caching.md  contracts.md  layering.md  middleware.md  overview.md  persistence.md
docs/development/: governance.md  setup.md  testing.md
docs/operations/: ci.md  docker.md  infrastructure.md  telemetry.md
infra/: .gitignore  .trivyignore  README.md
infra/terraform/modules/api/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/aurora/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cache/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cognito/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/migrate/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/network/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
infra/terragrunt/: root.hcl
infra/terragrunt/_envcommon/: api.hcl  aurora.hcl  cache.hcl  cognito.hcl  ecr.hcl  network.hcl  secrets.hcl
infra/terragrunt/dev/: env.hcl  terragrunt.stack.hcl
infra/terragrunt/dev/.terragrunt-stack/api/: .terragrunt-stack-manifest  terragrunt.values.hcl
infra/terragrunt/dev/.terragrunt-stack/aurora/: .terragrunt-stack-manifest  terragrunt.values.hcl
infra/terragrunt/dev/.terragrunt-stack/cache/: .terragrunt-stack-manifest  terragrunt.hcl
infra/terragrunt/dev/.terragrunt-stack/cognito/: .terragrunt-stack-manifest  terragrunt.hcl
infra/terragrunt/dev/.terragrunt-stack/ecr/: .terragrunt-stack-manifest  terragrunt.values.hcl
infra/terragrunt/dev/.terragrunt-stack/network/: .terragrunt-stack-manifest  terragrunt.values.hcl
infra/terragrunt/dev/.terragrunt-stack/secrets/: .terragrunt-stack-manifest  terragrunt.hcl  terragrunt.values.hcl
infra/terragrunt/dev/ecr/: terragrunt.hcl
infra/terragrunt/local/: env.hcl
infra/terragrunt/local/api/: terragrunt.hcl
infra/terragrunt/prod/: env.hcl  terragrunt.stack.hcl
infra/terragrunt/prod/aurora/: terragrunt.hcl
infra/terragrunt/prod/cache/: terragrunt.hcl
infra/terragrunt/prod/cognito/: terragrunt.hcl
infra/terragrunt/prod/network/: terragrunt.hcl
infra/terragrunt/prod/secrets/: terragrunt.hcl
infra/terragrunt/units/api/: terragrunt.hcl
infra/terragrunt/units/aurora/: terragrunt.hcl
infra/terragrunt/units/ecr/: terragrunt.hcl
infra/terragrunt/units/migrate/: terragrunt.hcl
infra/terragrunt/units/network/: terragrunt.hcl
migrations/: atlas.hcl
migrations/versions/: 20260711000000_baseline.sql  atlas.sum
src/ddd_app/contexts/shared/: container.py  contracts.py
src/ddd_app/contexts/shared/application/: page.py  request_context.py
src/ddd_app/contexts/shared/domain/: exceptions.py
src/ddd_app/contexts/shared/infrastructure/cache/: redis_cache.py
src/ddd_app/contexts/shared/infrastructure/db/: base_model.py  registry.py  scoped_session.py  session.py
src/ddd_app/contexts/users/: container.py
src/ddd_app/contexts/users/application/commands/: change_user_role.py  register_user.py
src/ddd_app/contexts/users/application/dto/: user_dto.py
src/ddd_app/contexts/users/application/queries/: get_user.py  list_users.py
src/ddd_app/contexts/users/domain/: exceptions.py
src/ddd_app/contexts/users/domain/entities/: user.py
src/ddd_app/contexts/users/domain/repositories/: user_repository.py
src/ddd_app/contexts/users/domain/services/: email_uniqueness.py
src/ddd_app/contexts/users/infrastructure/auth/: keycloak.py  oidc.py
src/ddd_app/contexts/users/infrastructure/db/models/: user_model.py
src/ddd_app/contexts/users/infrastructure/db/repositories/: sqlalchemy_user_repository.py
src/ddd_app/contexts/users/infrastructure/mappers/: user_mapper.py
src/ddd_app/core/: config.py  logging.py
src/ddd_app/core/di/: adapters.py  container.py
src/ddd_app/core/telemetry/: __init__.py  otel.py
src/ddd_app/presentation/api/: app.py  caching.py  dependencies.py  errors.py  lambda_handler.py  main.py  pagination.py  runtime.py
src/ddd_app/presentation/api/middleware/: body_size.py  rate_limit.py
src/ddd_app/presentation/api/v1/users/: routers.py  serializers.py
src/ddd_app/scripts/: seed.py
tests/: conftest.py
tests/architecture/: test_boundaries.py
tests/integration/: test_auth.py  test_contracts.py  test_user_repository.py  test_users_api.py
tests/unit/: fakes.py  test_caching.py  test_commands.py  test_config.py  test_error_mapping.py  test_keycloak.py  test_lambda_handler.py  test_middleware.py  test_oidc.py  test_queries.py  test_redis_cache.py  test_scoped_session.py  test_telemetry.py  test_user_entity.py  test_wiring.py
