[project]
name = "cj-fastapi-ddd"
version = "0.1.0"
description = "Simple DDD modular monolith (FastAPI, Keycloak RBAC, Redis cache, async Postgres)"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Cristian Galvis", email = "cjgalvisc@unal.edu.co" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "dependency-injector>=4.41",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
]

[project.scripts]
ddd-api = "ddd_app.presentation.api.main:main"
ddd-seed = "ddd_app.scripts.seed:main"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pyright>=1.1.370",
    "import-linter>=2.0",
    "vulture>=2.11",
]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",       # parallel test execution (-n)
    "pytest-randomly>=3.15",   # randomized test order each run
    "aiosqlite>=0.20",
    "asgi-lifespan>=2.1",
    "httpx>=0.27",
]

docs = [
    "mkdocs-material>=9.5",
]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ddd_app"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
# "S" = flake8-bandit (Python source security / SAST-lite: hardcoded secrets, shell=True, weak
# crypto, SQL built from strings, etc.). Complements Trivy, which covers deps/secrets/IaC but not code.
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["ddd_app"]

[tool.ruff.lint.per-file-ignores]
# Tests: assert is expected (S101); dummy passwords in fixtures are not real secrets (S105/S106).
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
# Parallel by default (-n auto via pytest-xdist); --dist loadscope keeps each module on one worker.
# Order is randomized each run by pytest-randomly. Coverage is measured every run and gated at 97%.
addopts = "-q -n auto --dist loadscope --cov --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src/ddd_app"]
omit = [
    "*/presentation/api/main.py",  # ASGI bootstrap entrypoint
    "*/scripts/*",                 # one-shot ops entrypoint (seeder)
]

[tool.coverage.report]
fail_under = 97
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:", "\\.\\.\\."]

[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingImports = true

[tool.vulture]
paths = ["src"]
min_confidence = 70

[tool.importlinter]
root_packages = ["ddd_app"]
include_external_packages = true

# --- Layered architecture per bounded context: domain <- application <- infrastructure ---
[[tool.importlinter.contracts]]
name = "Shared context layering"
type = "layers"
layers = ["infrastructure", "application", "domain"]
containers = ["ddd_app.contexts.shared"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Users context layering"
type = "layers"
layers = ["infrastructure", "application", "domain"]
containers = ["ddd_app.contexts.users"]
exhaustive = false

# --- Domain purity: no framework leakage into domain layers ---
[[tool.importlinter.contracts]]
name = "Domain layers are framework-free"
type = "forbidden"
source_modules = [
    "ddd_app.contexts.shared.domain",
    "ddd_app.contexts.users.domain",
]
forbidden_modules = [
    "fastapi",
    "sqlalchemy",
    "redis",
    "jose",
    "dependency_injector",
]

# --- Presentation must not reach into infrastructure directly ---
[[tool.importlinter.contracts]]
name = "Presentation depends on application, not infrastructure"
type = "forbidden"
source_modules = ["ddd_app.presentation"]
forbidden_modules = [
    "ddd_app.contexts.users.infrastructure",
]
allow_indirect_imports = true
